2011/06/06 - include Apache 2 license