@@ -55,10 +55,14 @@ class Hiera
 
                 describe "#lookup" do
                     it "should attempt to load data from unincluded classes" do
+                        Backend.expects(:empty_answer).returns(nil)
+                        Backend.expects(:parse_answer).with("rspec", @scope).returns("rspec")
+
                         catalog = mock
                         catalog.expects(:classes).returns([])
-                        @mockscope.expects(:catalog).returns(catalog)
-                        @mockscope.expects(:function_include).with("rspec")
+
+                        @scope.expects(:catalog).returns(catalog)
+                        @scope.expects(:function_include).with("rspec")
                         @mockscope.expects(:lookupvar).with("rspec::key").returns("rspec")
 
                         @backend.expects(:hierarchy).with(@scope, nil).returns(["rspec"])
@@ -66,6 +70,8 @@ class Hiera
                     end
 
                     it "should not load loaded classes" do
+                        Backend.expects(:empty_answer).returns(nil)
+                        Backend.expects(:parse_answer).with("rspec", @scope).returns("rspec")
                         catalog = mock
                         catalog.expects(:classes).returns(["rspec"])
                         @mockscope.expects(:catalog).returns(catalog)
@@ -77,6 +83,8 @@ class Hiera
                     end
 
                     it "should return the first found data" do
+                        Backend.expects(:empty_answer).returns(nil)
+                        Backend.expects(:parse_answer).with("rspec", @scope).returns("rspec")
                         catalog = mock
                         catalog.expects(:classes).returns(["rspec", "override"])
                         @mockscope.expects(:catalog).returns(catalog)
@@ -86,6 +94,21 @@ class Hiera
 
                         @backend.expects(:hierarchy).with(@scope, "override").returns(["override", "rspec"])
                         @backend.lookup("key", @scope, "override", nil).should == "rspec"
+                    end
+
+                    it "should return an array of found data for array searches" do
+                        Backend.expects(:empty_answer).returns([])
+                        Backend.expects(:parse_answer).with("rspec::key", @scope).returns("rspec::key")
+                        Backend.expects(:parse_answer).with("test::key", @scope).returns("test::key")
+                        catalog = mock
+                        catalog.expects(:classes).returns(["rspec", "test"])
+                        @mockscope.expects(:catalog).returns(catalog)
+                        @mockscope.expects(:function_include).never
+                        @mockscope.expects(:lookupvar).with("rspec::key").returns("rspec::key")
+                        @mockscope.expects(:lookupvar).with("test::key").returns("test::key")
+
+                        @backend.expects(:hierarchy).with(@scope, nil).returns(["rspec", "test"])
+                        @backend.lookup("key", @scope, nil, :array).should == ["rspec::key", "test::key"]
                     end
                 end
             end
