@@ -1,1 +1,2 @@
+2011/06/11 - add array search support
 2011/06/06 - include Apache 2 license
